# oh_my_timus

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
agent-api/: .env.example  README.md
agent-api/app/agents/: tools.py
agent-api/app/api/: __init__.py
agent-api/app/core/: config.py
agent-api/app/schemas/: __init__.py
agent-api/docs/: API.md
agent-api/tests/: test_api.py
app/: __init__.py  main.py
app/agents/: __init__.py  memory.py  service.py  tools.py
app/api/: __init__.py  agent.py
app/core/: __init__.py  config.py
app/schemas/: __init__.py  agent.py
tests/: test_api.py
